# 2D-Python-Orthogame

./: pyproject.toml
code/: main.py
code/sprites/: __init__.py  sprites.py
code/utils/: settings.py
